<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autonomous_map_navigate</name>
  <version>0.0.0</version>
  <description>autonomous mapping by wall following and navigating with safety features using behavior tree</description>
  <maintainer email="kishansawant96@gmail.com">melody</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>py_trees</exec_depend>
  <exec_depend>py_trees_ros</exec_depend>
  <exec_depend>task_manager_interfaces</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sys</exec_depend>
  <exec_depend>ast</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>py_trees_ros_interfaces</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ros2run</exec_depend>
  <exec_depend>ros2topic</exec_depend>  

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
